@@ -35,23 +35,20 @@
 <div class="topic">
 	<h3>CHANGELOG</h3>
 	<div class="pad">
-		<span><b>2020-10-03</b></span>
-		<div id="changelog20201003">
+		<span><b>2020-10-24</b></span>
+		<div id="changelog20201024">
 			<ul>
 				<li>Added Antonio's set</li>
-				<li>Added magical attack modifiers to Extended Info - Attack Modifiers</li>
-			</ul>
-		</div><br>
-		<span><b>2020-10-01</b></span>
-		<div id="changelog20201001">
-			<ul>
 				<li>Added Bankruptcy set</li>
 				<li>Added Lost Dragon MvP</li>
-				<li>Added Summer Cocktails</li>
+				<li>Fixed Book of Charms class restriction</li>
 				<li>Fixed Savage pet and Scuba Mask script</li>
 				<li>Fixed weapon and base attack bonus based</li>
 				<li>Fixed Apple of Idun and Berserk MaxHP formula</li>
 				<li>Fixed Assassin Cross of Sunset song ASDP formula</li>
+				<li>Added Preschool Hat and Insectivorous Plant Hairping</li>
+				<li>Added Summer Cocktails and new Summer Event equipment</li>
+				<li>Added magical attack modifiers to Extended Info - Attack Modifiers</li>
 			</ul>
 		</div>
 	</div>
