@@ -171,40 +171,40 @@ KunaiOBJ = [
 ];
 
 JobEquipItemOBJ = [
-[0,50,90,93,94,100,999], //Novice
-[0, 1, 51,101, 70, 71, 72, 74, 75,78,83,84,85,86,87,90,91,93,94,999], //Swordman
+[0,50,90,93,94,95,96,100,999], //Novice
+[0, 1, 51,101, 70, 71, 72, 74, 75,78,83,84,85,86,87,90,91,93,94,95,999], //Swordman
 [0, 1, 52,102, 72, 74, 75,78, 80,83,84,85,90,91,92,93,94,999], //Thief
-[0, 1, 53,103, 71, 73, 74, 77,78,85,89,152,999], //Acolyte
+[0, 1, 53,103, 71, 73, 74, 77,78,85,89,95,96,152,999], //Acolyte
 [0, 1, 54,104, 75, 76,83,89,92,999], //Archer
-[0, 1, 55,105, 71, 77,89,152,999], //Mage
-[0, 1, 56,106, 70, 71, 72, 73, 74, 75,78,83,84,85,86,90,91,93,94,999], //Merchant
+[0, 1, 55,105, 71, 77,89,96,152,999], //Mage
+[0, 1, 56,106, 70, 71, 72, 73, 74, 75,78,83,84,85,86,90,91,93,94,95,999], //Merchant
 [0, 1, 51, 61,107, 70, 71, 72, 74, 75,78,79,83,84,85,86,87,90,91,93,94,999], //Knight
 [0, 1, 52, 62,108, 72, 74, 75,78,79,81,83,84,85,90,91,93,94,999], //Assassin
-[0, 1, 53, 63,109, 71, 73, 74, 77,78,79,81,85,89,999], //Priest
+[0, 1, 53, 63,109, 71, 73, 74, 77,78,79,81,85,89,95,96,999], //Priest
 [0, 1, 54, 64,110, 75, 76,79,80,83,88,89,92,999], //Hunter
-[0, 1, 55, 65,111, 71, 77,79,89,999], //Wizard
-[0, 1, 56, 66,112, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,93,94,999], //Blacksmith
+[0, 1, 55, 65,111, 71, 77,79,89,96,999], //Wizard
+[0, 1, 56, 66,112, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,93,94,95,999], //Blacksmith
 [0, 1, 51, 61,113, 70, 71, 72, 74, 75,78,79,83,84,85,86,87,90,91,93,94,999], //Crusader
 [0, 1, 52, 62,114, 72, 74, 75, 76,78,79,80,83,84,85,88,91,92,93,94,999], //Rogue
-[0, 1, 53, 63,115, 71, 73, 74, 77,78,79,85,89,999], //Monk
+[0, 1, 53, 63,115, 71, 73, 74, 77,78,79,85,89,95,96,999], //Monk
 [0, 1, 54, 64,116, 74, 75, 76,79,83,89,92,999], //Bard
 [0, 1, 54, 64,117, 74, 75, 76,79,83,89,92,999], //Dancer
-[0, 1, 55, 65,118, 71, 77,79,89,999], //Sage
-[0, 1, 56, 66,119, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,93,94,999], //Alchemist
-[0,50,90,93,94,120,999], //High Novice
-[0, 1, 51, 61,107,121, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,93,94,999], //Lord Knight
+[0, 1, 55, 65,118, 71, 77,79,89,96,999], //Sage
+[0, 1, 56, 66,119, 70, 71, 72, 73, 74, 75,78,79,83,84,85,86,90,91,93,94,95,999], //Alchemist
+[0,50,90,93,94,95,96,120,999], // Super Novice
+[0, 1, 51, 61,107,121, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,93,94,95,999], //Lord Knight
 [0, 1, 52, 62,108,122, 72, 74, 75,78,79,81,82,83,84,85,90,91,93,94,999], //Assassin Cross
-[0, 1, 53, 63,109,123, 71, 73, 74, 77,78,79,81,82,85,89,151,152,999], //High Priest
+[0, 1, 53, 63,109,123, 71, 73, 74, 77,78,79,81,82,85,89,95,96,151,152,999], //High Priest
 [0, 1, 54, 64,110,124, 75, 76,79,80,82,83,88,89,92,999], //Sniper
-[0, 1, 55, 65,111,125, 71, 77,79,82,89,151,152,999], //High Wizard
-[0, 1, 56, 66,112,126, 70, 71, 72, 73, 74, 75,78,79,82,83,84,85,86,90,91,93,94,999], //Whitesmith
-[0, 1, 51, 61,113,127, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,93,94,999], //Paladin
+[0, 1, 55, 65,111,125, 71, 77,79,82,89,96,151,152,999], //High Wizard
+[0, 1, 56, 66,112,126, 70, 71, 72, 73, 74, 75,78,79,82,83,84,85,86,90,91,93,94,95,999], //Whitesmith
+[0, 1, 51, 61,113,127, 70, 71, 72, 74, 75,78,79,82,83,84,85,86,87,90,91,93,94,95,999], //Paladin
 [0, 1, 52, 62,114,128, 72, 74, 75, 76,78,79,80,82,83,84,85,88,91,92,93,94,999], //Stalker
-[0, 1, 53, 63,115,129, 71, 73, 74,77,78,79,82,85,89,152,999], //Champion
+[0, 1, 53, 63,115,129, 71, 73, 74,77,78,79,82,85,89,95,96,152,999], //Champion
 [0, 1, 54, 64,116,130, 74, 75, 76,79,82,83,89,153,92,999], //Clown
 [0, 1, 54, 64,117,131, 74, 75, 76,79,82,83,89,153,92,999], //Gypsy
-[0, 1, 55, 65,118,132, 71,77,79,82,89,152,999], //Professor
-[0, 1, 56, 66,119,133, 70, 71, 72, 73, 74, 75,78,79,82,83,84,85,86,90,91,93,94,999], //Creator
+[0, 1, 55, 65,118,132, 71,77,79,82,89,152,96,999], //Professor
+[0, 1, 56, 66,119,133, 70, 71, 72, 73, 74, 75,78,79,82,83,84,85,86,90,91,93,94,95,999], //Creator
 [0],
 [0],
 [0],
@@ -214,7 +214,7 @@ JobEquipItemOBJ = [
 [0],
 [0, 1,141, 83,84,85,86,150,999], //Taekwon Kid //custom
 [0, 1,142, 79,83,84,85,86,87,91,150,999], //Star Gladiator
-[0, 1,143, 55, 65, 71, 77,79,89,93,999], //Soul Linker
+[0, 1,143, 55, 65, 71, 77,79,89,93,96,999], //Soul Linker
 [0, 1,144, 58, 52,91,93,999], //Ninja
 [0, 1,145, 59, 83,145,999], //Gunslinger
 ];
@@ -267,6 +267,8 @@ JobEquipItemOBJ = [
 		92 = archer class, thief, rogue
 		93 = novice, swordman class, merchant class, thief class, ninja, soul linker
 		94 = novice, swordman class, merchant class, thief class
+		95 = novice, swordman class, merchant class, acolyte class
+		96 = novice, mage class, acolyte class, soul linker
 
 		100 = novice ONLY
 		101 = swordman ONLY
@@ -3028,8 +3030,16 @@ function BattleMagicCalc(wBMC)
 	// Damage multiplier for race - bMagicAddRace
 	var wMRaceX = n_tok[170 + n_B[2]];
 	
-	wBMC2 = wBMC2 * (100 + wMRaceX) /100;
-	// << bMagicAddRace
+	// >> bMagicAddRace2
+	/*
+		Detecting Staff#1735 - Increases magical damage against Kiel Dungeon Monsters (except Alice), Juperos Ruins Monsters, and Guardians by 5%
+		[Every Refine Level] Magical damage increased by 1%"
+	*/
+	if (EquipNumSearch(1735) && (IsAKielDungeonMonster() || IsAJuperosRuinsMonster()))
+		wMRaceX += 5 + n_A_Weapon_ATKplus;
+	
+	wBMC2 = wBMC2 * (100 + wMRaceX) / 100;
+	// << bMagicAddRace2 << bMagicAddRace
 
 	// >> bMagicAddClass
 	var wMClassX = 0
@@ -3054,9 +3064,6 @@ function BattleMagicCalc(wBMC)
 	
 	// >> bAddMagicDamageClass
 	// << bAddMagicDamageClass
-	
-	// >> bMagicAddRace2
-	// << bMagicAddRace2
 	
 	wBMC2 = tPlusDamCut(wBMC2);
 
